--- a/front/src/Components/Login/Login.css
+++ b/front/src/Components/Login/Login.css
@@ -31,6 +31,7 @@
 .LoginLogoo {
     width: 50%;
     position: relative;
+    top: 2px;
 }
 .FormItems label{
     position: relative;
@@ -44,6 +45,7 @@
 .LoginForm {
     position: relative;
     left: 50px;
+    bottom: 30px;
 }
 
 .FormItems input[type = "email"],
